--- a/css/my_style.css
+++ b/css/my_style.css
@@ -5,3 +5,10 @@ body {
     h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Noto Sans TC', sans-serif;
     }
+.expedu_icon {
+    color:#2894FF;
+}
+.expedu_icon:hover {
+    background-color:#53FF53;
+    color:#fff;
+}
