--- a/css/my_style.css
+++ b/css/my_style.css
@@ -9,6 +9,6 @@ body {
     color:#2894FF;
 }
 .expedu_icon:hover {
-    background-color:#53FF53;
-    color:#fff;
+    background-color:#2894FF;
+    color:#28FF28;
 }
