--- a/css/my_style.css
+++ b/css/my_style.css
@@ -4,4 +4,11 @@ body {
     
     h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Noto Sans TC', sans-serif;
-    }
+   }
+.expedu_icon{
+    color:#0080FF;
+} 
+.expedu_icon:hover {
+    background-color:#0080FF ;
+    color: #fff;
+}
