--- a/css/my_style.css
+++ b/css/my_style.css
@@ -12,3 +12,10 @@ body {
     background-color:#0080FF ;
     color: #fff;
 }
+.expedu_icon{
+    color:#0080FF;
+} 
+.expedu_icon:hover {
+    background-color:#0080FF ;
+    color: #fff;
+}
