--- a/css/styles.css
+++ b/css/styles.css
@@ -1985,7 +1985,7 @@ progress {
   margin-bottom: 1rem;
   color: #212529;
   vertical-align: top;
-  border-color: #dee2e6;
+  border-color: #7975a8;
 }
 .table > :not(caption) > * > * {
   padding: 0.5rem 0.5rem;
