--- a/css/my_style.css
+++ b/css/my_style.css
@@ -6,10 +6,10 @@ font-family:'Noto Sans TC', sans-serif;
 }
   
 .expedu_icon{
-    color:#0080FF;
+    color:#2dc487;
 } 
 .expedu_icon:hover {
-    background-color:#0080FF ;
+    background-color:#2dc487 ;
     color: #fff;
 }
 .expedu_icon{
